tests/errors/pattern-ref-mut-immutable.ari
fn main() -> i64 {
  let value = 1;
  let ref mut borrowed = value;
  return 0;
}
